--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - chmod +x miniconda.sh
   - ./miniconda.sh -b -p $HOME/miniconda
   - export PATH=$HOME/miniconda/bin:$PATH
-  - conda update -q --yes conda
+#  - conda update -q --yes conda
   - export FUEL_DATA_PATH=$TRAVIS_BUILD_DIR/data
   - export FUEL_LOCAL_DATA_PATH=$TRAVIS_BUILD_DIR/data_local
   - export FUEL_FLOATX=float64
@@ -49,6 +49,7 @@ script:
   - function fail { export FAILED=1; }
   - |
       if [[ $TESTS == 'blocks' ]]; then
+        export MKL_THREADING_LAYER=GNU # For Theano
         bokeh-server &> /dev/null &
         export PYTHONPATH=$HOME/blocks
         nose2 tests --start-dir $HOME/blocks || fail
